welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: too many arguments for method getCouleurSol: ()java.awt.Color
			T(i) = getCouleurSol(getMondeHauteur()-1);
                                            ^